# sdypy-FRF

./: README.rst  pyproject.toml  requirements.dev.txt  requirements.txt
docs/source/: conf.py  index.rst
sdypy/FRF/: __init__.py
