[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sdypy-FRF"
version = "0.1.0"
authors = [{name = "Janko Slavič et al.", email = "janko.slavic@fs.uni-lj.si"}]
maintainers = [{name = "Janko Slavič et al.", email = "janko.slavic@fs.uni-lj.si"}]
license = "MIT"
description = "Frequency response function as used in structural dynamics."
readme = "README.rst"
keywords = ["Frequency response function", "MIMO", "SIMO/MISO", "SISO", "structural dynamics"]
requires-python = ">=3.10"
dependencies = ["pyFRF >= 1.0"]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering',
    'Programming Language :: Python :: 3.10',
    "License :: OSI Approved :: MIT License",
]

[tool.hatch.build.targets.wheel]
include = ["sdypy"]

[project.optional-dependencies]
dev = [
    "sphinx",
    "twine",
    "wheel",
    "pytest",
    "build",
    "sphinx-rtd-theme",
    "sphinx-copybutton>=0.5.2",
]

[project.urls]
homepage = "https://github.com/sdypy/sdypy-FRF"
documentation = "https://pyfrf.readthedocs.io/en/latest/index.html"
source = "https://github.com/sdypy/sdypy-FRF"
